// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/spin/demo/basic.tsx extend context correctly 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  class="g-spin g-spin-spinning g-spin-section css-var-test-id"
>
  <span
    class="g-spin-dot-holder"
  >
    <span
      class="g-spin-dot g-spin-dot-spin"
    >
      <i
        class="g-spin-dot-item"
      />
      <i
        class="g-spin-dot-item"
      />
      <i
        class="g-spin-dot-item"
      />
      <i
        class="g-spin-dot-item"
      />
    </span>
  </span>
</div>
`;

exports[`renders components/spin/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/spin/demo/custom-indicator.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-center g-flex-gap-medium"
>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-sm g-spin-spinning g-spin-section css-var-test-id"
  >
    <span
      aria-label="loading"
      class="gicon gicon-loading gicon-spin g-spin-dot"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-spinning g-spin-section css-var-test-id"
  >
    <span
      aria-label="loading"
      class="gicon gicon-loading gicon-spin g-spin-dot"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-lg g-spin-spinning g-spin-section css-var-test-id"
  >
    <span
      aria-label="loading"
      class="gicon gicon-loading gicon-spin g-spin-dot"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-spinning g-spin-section css-var-test-id"
  >
    <span
      aria-label="loading"
      class="gicon gicon-loading gicon-spin g-spin-dot"
      role="img"
      style="font-size: 48px;"
    >
      <svg
        aria-hidden="true"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`renders components/spin/demo/custom-indicator.tsx extend context correctly 2`] = `[]`;

exports[`renders components/spin/demo/delayAndDebounce.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-test-id"
  >
    <div
      class="g-spin-container"
    >
      <div
        class="g-alert g-alert-info g-alert-with-description g-alert-no-icon css-var-test-id"
        data-show="true"
        role="alert"
      >
        <div
          class="g-alert-section"
        >
          <div
            class="g-alert-title"
          >
            Alert message title
          </div>
          <div
            class="g-alert-description"
          >
            Further details about the context of this alert.
          </div>
        </div>
      </div>
    </div>
  </div>
  <p>
    Loading state：
    <button
      aria-checked="false"
      class="g-switch css-var-test-id"
      role="switch"
      type="button"
    >
      <div
        class="g-switch-handle"
      />
      <span
        class="g-switch-inner"
      >
        <span
          class="g-switch-inner-checked"
        />
        <span
          class="g-switch-inner-unchecked"
        />
      </span>
    </button>
  </p>
</div>
`;

exports[`renders components/spin/demo/delayAndDebounce.tsx extend context correctly 2`] = `[]`;

exports[`renders components/spin/demo/fullscreen.tsx extend context correctly 1`] = `
Array [
  <button
    class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
    type="button"
  >
    <span>
      Show fullscreen
    </span>
  </button>,
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin g-spin-fullscreen css-var-test-id"
  />,
]
`;

exports[`renders components/spin/demo/fullscreen.tsx extend context correctly 2`] = `[]`;

exports[`renders components/spin/demo/nested.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-test-id"
  >
    <div
      class="g-spin-container"
    >
      <div
        class="g-alert g-alert-info g-alert-with-description g-alert-no-icon css-var-test-id"
        data-show="true"
        role="alert"
      >
        <div
          class="g-alert-section"
        >
          <div
            class="g-alert-title"
          >
            Alert message title
          </div>
          <div
            class="g-alert-description"
          >
            Further details about the context of this alert.
          </div>
        </div>
      </div>
    </div>
  </div>
  <p>
    Loading state：
    <button
      aria-checked="false"
      class="g-switch css-var-test-id"
      role="switch"
      type="button"
    >
      <div
        class="g-switch-handle"
      />
      <span
        class="g-switch-inner"
      >
        <span
          class="g-switch-inner-checked"
        />
        <span
          class="g-switch-inner-unchecked"
        />
      </span>
    </button>
  </p>
</div>
`;

exports[`renders components/spin/demo/nested.tsx extend context correctly 2`] = `[]`;

exports[`renders components/spin/demo/percent.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-center g-flex-gap-medium"
>
  <button
    aria-checked="false"
    class="g-switch css-var-test-id"
    role="switch"
    type="button"
  >
    <div
      class="g-switch-handle"
    />
    <span
      class="g-switch-inner"
    >
      <span
        class="g-switch-inner-checked"
      >
        Auto
      </span>
      <span
        class="g-switch-inner-unchecked"
      >
        Auto
      </span>
    </span>
  </button>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-sm g-spin-spinning g-spin-section css-var-test-id"
  >
    <span
      class="g-spin-dot-holder"
    >
      <span
        class="g-spin-dot g-spin-dot-spin"
      >
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
      </span>
    </span>
    <span
      class="g-spin-dot-holder g-spin-dot-progress g-spin-dot-holder-hidden"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <circle
          class="g-spin-dot-circle g-spin-dot-circle-bg"
          cx="50"
          cy="50"
          r="40"
          stroke-width="20"
        />
        <circle
          class="g-spin-dot-circle"
          cx="50"
          cy="50"
          r="40"
          stroke-width="20"
          style="stroke-dashoffset: 62.83185307179586; stroke-dasharray: 0 251.32741228718342;"
        />
      </svg>
    </span>
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-spinning g-spin-section css-var-test-id"
  >
    <span
      class="g-spin-dot-holder"
    >
      <span
        class="g-spin-dot g-spin-dot-spin"
      >
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
      </span>
    </span>
    <span
      class="g-spin-dot-holder g-spin-dot-progress g-spin-dot-holder-hidden"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <circle
          class="g-spin-dot-circle g-spin-dot-circle-bg"
          cx="50"
          cy="50"
          r="40"
          stroke-width="20"
        />
        <circle
          class="g-spin-dot-circle"
          cx="50"
          cy="50"
          r="40"
          stroke-width="20"
          style="stroke-dashoffset: 62.83185307179586; stroke-dasharray: 0 251.32741228718342;"
        />
      </svg>
    </span>
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-lg g-spin-spinning g-spin-section css-var-test-id"
  >
    <span
      class="g-spin-dot-holder"
    >
      <span
        class="g-spin-dot g-spin-dot-spin"
      >
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
      </span>
    </span>
    <span
      class="g-spin-dot-holder g-spin-dot-progress g-spin-dot-holder-hidden"
    >
      <svg
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        role="progressbar"
        viewBox="0 0 100 100"
      >
        <circle
          class="g-spin-dot-circle g-spin-dot-circle-bg"
          cx="50"
          cy="50"
          r="40"
          stroke-width="20"
        />
        <circle
          class="g-spin-dot-circle"
          cx="50"
          cy="50"
          r="40"
          stroke-width="20"
          style="stroke-dashoffset: 62.83185307179586; stroke-dasharray: 0 251.32741228718342;"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`renders components/spin/demo/percent.tsx extend context correctly 2`] = `[]`;

exports[`renders components/spin/demo/size.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-center g-flex-gap-medium"
>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-sm g-spin-spinning g-spin-section css-var-test-id"
  >
    <span
      class="g-spin-dot-holder"
    >
      <span
        class="g-spin-dot g-spin-dot-spin"
      >
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
      </span>
    </span>
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-spinning g-spin-section css-var-test-id"
  >
    <span
      class="g-spin-dot-holder"
    >
      <span
        class="g-spin-dot g-spin-dot-spin"
      >
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
      </span>
    </span>
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-lg g-spin-spinning g-spin-section css-var-test-id"
  >
    <span
      class="g-spin-dot-holder"
    >
      <span
        class="g-spin-dot g-spin-dot-spin"
      >
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`renders components/spin/demo/size.tsx extend context correctly 2`] = `[]`;

exports[`renders components/spin/demo/style-class.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-center g-flex-gap-medium"
>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-spinning acss-11z55jn g-spin-section css-var-test-id"
  >
    <span
      class="g-spin-dot-holder"
      style="color: rgb(0, 212, 255);"
    >
      <span
        class="g-spin-dot g-spin-dot-spin"
      >
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
      </span>
    </span>
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-sm g-spin-spinning acss-11z55jn g-spin-section css-var-test-id"
  >
    <span
      class="g-spin-dot-holder"
      style="color: rgb(114, 46, 209);"
    >
      <span
        class="g-spin-dot g-spin-dot-spin"
      >
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
        <i
          class="g-spin-dot-item"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`renders components/spin/demo/style-class.tsx extend context correctly 2`] = `[]`;

exports[`renders components/spin/demo/tip.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-flex css-var-test-id g-flex-gap-medium"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      class="g-spin g-spin-sm g-spin-spinning css-var-test-id"
    >
      <div
        class="g-spin-section"
      >
        <span
          class="g-spin-dot-holder"
        >
          <span
            class="g-spin-dot g-spin-dot-spin"
          >
            <i
              class="g-spin-dot-item"
            />
            <i
              class="g-spin-dot-item"
            />
            <i
              class="g-spin-dot-item"
            />
            <i
              class="g-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="g-spin-description"
        >
          Loading
        </div>
      </div>
      <div
        class="g-spin-container"
      >
        <div
          style="padding: 50px; background: rgba(0, 0, 0, 0.05); border-radius: 4px;"
        />
      </div>
    </div>
    <div
      aria-busy="true"
      aria-live="polite"
      class="g-spin g-spin-spinning css-var-test-id"
    >
      <div
        class="g-spin-section"
      >
        <span
          class="g-spin-dot-holder"
        >
          <span
            class="g-spin-dot g-spin-dot-spin"
          >
            <i
              class="g-spin-dot-item"
            />
            <i
              class="g-spin-dot-item"
            />
            <i
              class="g-spin-dot-item"
            />
            <i
              class="g-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="g-spin-description"
        >
          Loading
        </div>
      </div>
      <div
        class="g-spin-container"
      >
        <div
          style="padding: 50px; background: rgba(0, 0, 0, 0.05); border-radius: 4px;"
        />
      </div>
    </div>
    <div
      aria-busy="true"
      aria-live="polite"
      class="g-spin g-spin-lg g-spin-spinning css-var-test-id"
    >
      <div
        class="g-spin-section"
      >
        <span
          class="g-spin-dot-holder"
        >
          <span
            class="g-spin-dot g-spin-dot-spin"
          >
            <i
              class="g-spin-dot-item"
            />
            <i
              class="g-spin-dot-item"
            />
            <i
              class="g-spin-dot-item"
            />
            <i
              class="g-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="g-spin-description"
        >
          Loading
        </div>
      </div>
      <div
        class="g-spin-container"
      >
        <div
          style="padding: 50px; background: rgba(0, 0, 0, 0.05); border-radius: 4px;"
        />
      </div>
    </div>
  </div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="g-spin g-spin-spinning css-var-test-id"
  >
    <div
      class="g-spin-section"
    >
      <span
        class="g-spin-dot-holder"
      >
        <span
          class="g-spin-dot g-spin-dot-spin"
        >
          <i
            class="g-spin-dot-item"
          />
          <i
            class="g-spin-dot-item"
          />
          <i
            class="g-spin-dot-item"
          />
          <i
            class="g-spin-dot-item"
          />
        </span>
      </span>
      <div
        class="g-spin-description"
      >
        Loading...
      </div>
    </div>
    <div
      class="g-spin-container"
    >
      <div
        class="g-alert g-alert-info g-alert-with-description g-alert-no-icon css-var-test-id"
        data-show="true"
        role="alert"
      >
        <div
          class="g-alert-section"
        >
          <div
            class="g-alert-title"
          >
            Alert message title
          </div>
          <div
            class="g-alert-description"
          >
            Further details about the context of this alert.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/spin/demo/tip.tsx extend context correctly 2`] = `[]`;
